name:                arachne
version:             0.1.0.0
homepage:            https://github.com/rasendubi/arachne
bug-reports:         https://github.com/rasendubi/arachne/issues
synopsis:            A set of tools for MQTT protocol
license:             BSD3
license-file:        LICENSE
author:              Alexey Shmalko <rasen.dubi@gmail.com>
maintainer:          Alexey Shmalko <rasen.dubi@gmail.com>
copyright:           (c) 2016 Alexey Shmalko
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.MQTT.Packet
                       Network.MQTT.Parser
                       Network.MQTT.Encoder
                       Network.MQTT.Gateway
                       Network.MQTT.Gateway.Core
                       Network.MQTT.Gateway.Socket
                       Network.MQTT.Client
                       Network.MQTT.Client.Core
                       Network.MQTT.Client.Socket
                       Network.MQTT.Client.Utils
                       Network.MQTT.SN.Packet
                       Network.MQTT.SN.Parser
                       Network.MQTT.SN.Encoder
                       Network.MQTT.Utils
                       Data.TopicFilterTrie
  build-depends:       base >=4.8.1 && <4.10
                     , attoparsec >=0.12.1 && <0.14
                     , attoparsec-binary >=0.2 && <0.3
                     , bytestring >=0.10.6 && <0.11
                     , containers >=0.5.6 && <0.6
                     , hashable <2
                     , hslogger >=1.2.9 && <1.3
                     , io-streams >=1.3.5 && <1.4
                     , monad-loops >=0.4 && <0.5
                     , mtl >=2.2.1 && <2.3
                     , network >=2.6.2 && <2.7
                     , random >=1.1 && <1.2
                     , semigroups >=0.18.1 && <0.19
                     , stm >=2.4.4 && <2.5
                     , stm-containers >=0.2.10 && <0.3
                     , text >=1.2.1 && <1.3
                     , tries >=0.0.4 && <0.1
                     , unordered-containers >=0.2.5 && <2.6
  hs-source-dirs:      src
  default-language:    Haskell2010

executable mqtt-gateway
  main-is:             Main.hs
  hs-source-dirs:      mqtt-gateway
  build-depends:       base >=4.8.1 && <4.10
                     , hslogger >=1.2.9 && <1.3
                     , arachne
                     , network >=2.6.2 && <2.7
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Network.MQTT.ParserSpec
                       Network.MQTT.EncoderSpec
                       Network.MQTT.GatewaySpec
                       Network.MQTT.ClientSpec
                       Network.MQTT.SN.ParserSpec
                       Network.MQTT.SN.EncoderSpec
  build-depends:       base >=4.8.1 && <4.10
                     , arachne
                     , attoparsec >=0.12.1 && <0.14
                     , bytestring >=0.10.6 && <0.11
                     , containers >=0.5.6 && <0.6
                     , hslogger >=1.2.9 && <1.3
                     , hspec >=2.2.3 && <2.3
                     , hspec-smallcheck >=0.3.0 && <0.5
                     , io-streams >=1.3.5 && <1.4
                     , mtl >=2.2.1 && <2.3
                     , network >=2.6.2 && <2.7
                     , random >=1.1 && <1.2
                     , smallcheck >=1.1.1 && <1.2
                     , smallcheck-series >=0.5.1 && <0.6
                     , stm >=2.4.4 && <2.5
                     , stm-containers >=0.2.10 && <0.3
                     , text >=1.2.1 && <1.3
                     , vector >=0.11 && <0.12
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rasendubi/arachne
