name:                mqtt-broker
version:             0.1.0.0
homepage:            https://github.com/rasendubi/mqtt-broker
bug-reports:         https://github.com/rasendubi/mqtt-broker/issues
synopsis:            A broker for MQTT protocol
license:             BSD3
license-file:        LICENSE
author:              Alexey Shmalko <rasen.dubi@gmail.com>
maintainer:          Alexey Shmalko <rasen.dubi@gmail.com>
copyright:           (c) 2016 Alexey Shmalko
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.MQTT.Packet
                       Network.MQTT.Parser
                       Network.MQTT.Encoder
  build-depends:       base
                     , text
                     , bytestring
                     , attoparsec
                     , attoparsec-binary
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       attoparsec
                     , base
                     , bytestring
                     , hspec == 2.*
                     , hspec-smallcheck
                     , mqtt-broker
                     , smallcheck >= 1.1.1
                     , text

source-repository head
  type:     git
  location: https://github.com/rasendubi/mqtt-broker
