name:                mqtt-broker
version:             0.1.0.0
homepage:            https://github.com/rasendubi/mqtt-broker
bug-reports:         https://github.com/rasendubi/mqtt-broker/issues
synopsis:            A broker for MQTT protocol
license:             BSD3
license-file:        LICENSE
author:              Alexey Shmalko <rasen.dubi@gmail.com>
maintainer:          Alexey Shmalko <rasen.dubi@gmail.com>
copyright:           (c) 2016 Alexey Shmalko
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.MQTT.Packet
                       Network.MQTT.Parser
                       Network.MQTT.Encoder
                       Network.MQTT.Gateway
  build-depends:       base >=4.8.1 && <4.9
                     , attoparsec >=0.12.1 && <0.14
                     , attoparsec-binary >=0.2 && <0.3
                     , bytestring >=0.10.6 && <0.11
                     , mtl >=2.2.1 && <2.3
                     , network >=2.6.2 && <2.7
                     , stm >=2.4.4 && <2.5
                     , text >=1.2.1 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010

executable mqtt-gateway
  main-is:             Main.hs
  hs-source-dirs:      mqtt-gateway
  build-depends:       base >=4.8.1 && <4.9
                     , mqtt-broker
                     , network >=2.6.2 && <2.7
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Network.MQTT.ParserSpec
                       Network.MQTT.EncoderSpec
                       Network.MQTT.GatewaySpec
  build-depends:       base >=4.8.1 && <4.9
                     , mqtt-broker
                     , attoparsec >=0.12.1 && <0.14
                     , bytestring >=0.10.6 && <0.11
                     , text >=1.2.1 && <1.3
                     , hspec >=2.2.3 && <2.3
                     , hspec-smallcheck >=0.3.0 && <0.5
                     , mtl >=2.2.1 && <2.3
                     , network >=2.6.2 && <2.7
                     , smallcheck >=1.1.1 && < 1.2
                     , smallcheck-series >=0.5.1 && <0.6
                     , random >=1.1 && <1.2
                     , vector >=0.11 && <0.12
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rasendubi/mqtt-broker
